--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Angular UI Router Playground</title>
-    <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-ui-router/build/angular-ui-router.js"></script>
+    <script src="../node_modules/angular/angular.js"></script>
+    <script src="../node_modules/angular-ui-router/build/angular-ui-router.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
